# cdi3

./: CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs  parameter.rs  parameter_group.rs  part.rs
