[package]
name = "cdi3"
version = "0.2.0"
edition = "2021"
authors = ["Chris Olstrom <chris@olstrom.com>"]
license = "MIT"
repository = "https://github.com/vtubing/cdi3"
documentation = "https://docs.rs/cdi3"
description = "data types for (de)serializing display settings from cdi3.json files"

[dependencies]
remain = "^ 0.2"
serde = { version = "^ 1", features = ["derive"] }
serde_json = { version = "^ 1", features = ["preserve_order"] }
